# auth-sample

./: AUTH_SYSTEM_ANALYSIS.md  OAUTH_FLOW_DOCUMENTATION.md  README.md
auth-backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/lib/: auth.ts  index.ts
frontend/src/lib/components/: app-sidebar.svelte  login-form.svelte  nav-user.svelte  site-header.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/auth/github/callback/: +page.svelte
frontend/src/routes/auth/google/callback/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
